Version 0.x.y (2008-mm-dd):

	* Hook functions added. This allows the behavour and functionality
	  of batchelor to be extended by user provided callback functions
	  defined in include/hooks.inc.
	  
Version 0.6.1 (2008-03-14):

	* Deleting a job directory is now working recursive (bugfix).
	
	* Preserve original filename of uploaded file is now possible. The
	  filename is not preserved by default (see conf/config.inc).
	
	* Fixed bug where subdirs under cache/../result/ got added to the
	  zipfile as regular files when using the PECL zip extension.
	
Version 0.6.0 (2008-03-14):

	* Added statistics module. Run utils/collect.php to generate the
	  statistics data. Access control is configured in conf/config.inc.

Version 0.5.1 (2008-03-07):

	* Maintenance release to fix version issues.
	
Version 0.5.0 (2008-03-06):

	* Its now possible to configure menu orientation (horizontal or
	  vertical) and menu style (graphic, text or compact) from inside
	  conf/config.inc.
	  
	* Added program options to simula.c (test program).
	
	* Ported batchelor to BSD/Mac OS X (tested with 10.4.11). The running 
	  state is not available on OSX using its builtin at command due to 
	  missing information in its output.
	  
Version 0.4.2 (2008-02-21):
	
	* Added qsignal() function to utils/script.sh.in to help users
	  communicate the job state to batchelor in a well-defined way.
	  
	* Its now easy to add new items to the tab menu in about.php. Just
	  create an external HTML page or an function inside about.php and
	  add it to the tabmenu array inside the function print_about().
	  
	* Adding icons to page headers (like About, Help and Job Queue).
	
	* Adding warning state (in addition to existing pending, running,
	  finished, error and crashed).
	  
Version 0.4.1 (2008-02-20):

	* Adding message box function for reporting errors and info.
	
	* Fixed error handling in download.php, details.php and delete.php
	
Version 0.4.0 (2008-02-18):
